change geolab main page font-family, footer color, mobile style

--- a/Server/templates/geolab.html
+++ b/Server/templates/geolab.html
@@ -85,8 +85,8 @@
         <section id="gallery" class="gallery">
             <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-8">
+                    <div class="row" id="image_container_row">
+                        <div class="col-8" id=change_right_left>
                             <div class="row">
                                 <div class="col">
                                     <div class="gallery-item">
@@ -120,7 +120,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-4" id="container">
                             <div class="container" data-aos="fade-up" id="application-list">
                                 <div class="section-title">
                                     <p>Applications</p>
