--- a/Server/templates/base.html
+++ b/Server/templates/base.html
@@ -172,13 +172,13 @@
                                             </a>
                                     </li>
                                 </ul>
-                                <ul style="margin-top:60px;">
-                                    <li style="width: 155px; margin:auto;">
+                                <ul style="margin-top:35px;">
+                                    <li style="width: 155px; margin:auto; margin-left: -3px;">
                                         <a href="{% url 'messages' request.user.pk %}" aria-expanded="false" style="display: block;"><i class="ti-email m-r-5 m-l-5"></i><span class="hide-menu" style="margin-top: -1px;margin-left: 5px; position: absolute;">Inbox<span id = "message_inbox_count" style="font-size: 16px" class="hide-menu"></span></span></a>
                                     </li>
                                 </ul>
-                                <ul style="margin-top:60px;">
-                                    <li style="width: 155px; margin:auto;">
+                                <ul style="margin-top:35px;">
+                                    <li style="width: 155px; margin:auto; margin-left: -4px;">
                                         <a href="{% url 'request_list' request.user.pk %}" aria-expanded="false" style="display: block;"><i class=" mdi mdi-folder-download"></i><span class="hide-menu" style="margin-top: -1px;margin-left: 5px; position: absolute;">Requests<span style="font-size: 16px" class="hide-menu"></span></span></a>
                                     </li>
                                 </ul>
