--- a/Server/templates/plot.html
+++ b/Server/templates/plot.html
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div class = "time_error">
-                    <p id="error_2_id_description" class="invalid-feedback"><strong>The start time could not be greater than the end time</strong></p>
+                    <p id="error_2_id_description" class="invalid-feedback"><strong></strong></p>
                     <p id="correct_2_id_description" class="valid-feedback"><strong>Please check your requests</strong></p>
                 </div>
                 <div id="download_all_day">
@@ -173,6 +173,10 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-danger"data-dismiss="modal" style ="background-color: #f20a34">Close</button>
+            {% if request.user.userType == 'is_admin' %}
+                <button type="button" class="btn btn-secondary" id="downloadLastHour">last hour download</button>
+            {% endif %}
+
             <button type="button" class="btn btn-success pull-right" id="download_end" style ="background-color: #36bea6">download</button>
           </div>
         </div>
@@ -381,6 +385,40 @@
         });
 
 
+    $(document).on('click', '#downloadLastHour', function(event){
+        event.preventDefault();
+        $("#download_all").css("opacity", 0.5);
+        $('#error_3_id_description').css('display', 'none');
+        $('#error_2_id_description').css('display', 'none');
+        $('#correct_2_id_description').css('display', 'none');
+        var Stations = [];
+        $.each($("input[name='station']:checked"), function(){            
+            Stations.push($(this).val());
+        });
+        if (Stations.length == 0){
+            $("download_all").css("opacity", 1);
+            $("#error_3_id_description").css('display', 'block');
+        } else {
+            $.ajax({
+                type: "GET",
+                data: {
+                    'StationsId' : Stations
+                },
+                url: "{% url 'downloadLastHour' request.user.pk %}",
+            success: function() {
+                $("#download_all").css("opacity", 1)
+                $('#error_3_id_description').css('display', 'none')
+                $('#error_2_id_description').css('display', 'none')
+                $('#correct_2_id_description').css('display', 'block')
+            },
+            error: function() {
+                $('#error_2_id_description').css('display', 'block');
+                $('#error_2_id_description').text('Please try again');
+                $("#download_all").css("opacity", 1);
+            }
+            })
+        }
+    })
     $(document).on('click', "#download_end", function(event){
         event.preventDefault();
         $("#download_all").css("opacity", 0.5)
@@ -388,17 +426,17 @@
         $('#error_2_id_description').css('display', 'none')
         $('#correct_2_id_description').css('display', 'none')
         var stations = [];
-        var start_hour = $("#start_hour").val();
-        var end_hour = $("#end_hour").val();
-        var start_time = $('#inputDate3').val()
-        var end_time = $('#inputDate4').val()
+        var start_hour = $("#start_hour").val().substring(0, 2);
+        var end_hour = $("#end_hour").val().substring(0, 2);
+        var start_time = $('#inputDate3').val();
+        var end_time = $('#inputDate4').val();
         $.each($("input[name='station']:checked"), function(){            
             stations.push($(this).val());
         });
         if (stations.length == 0){
-            $("#download_all").css("opacity", 1)
-            $('#error_3_id_description').css('display', 'block')
-        }else{
+            $("#download_all").css("opacity", 1);
+            $('#error_3_id_description').css('display', 'block');
+        } else{
             $.ajax({
               type: "GET",
               data: {
@@ -416,9 +454,17 @@
                 $('#error_2_id_description').css('display', 'none')
                 $('#correct_2_id_description').css('display', 'block')
             },
-            error: function(){
-                $('#error_2_id_description').css('display', 'block')
-                $("#download_all").css("opacity", 1)
+            error: function(data){
+                if (data.responseJSON.ErrorType == 'Error1') {
+                    console.log("here")
+                    $('#error_2_id_description').css('display', 'block');
+                    $('#error_2_id_description').text('The start time could not be greater than the end time');
+                    $("#download_all").css("opacity", 1);
+                } else if (data.responseJSON.ErrorType == 'Error2') {
+                    $('#error_2_id_description').css('display', 'block');
+                    $('#error_2_id_description').text('Your request is not accepted(check help)');
+                    $("#download_all").css("opacity", 1);
+                }
             },
 
             });
@@ -731,10 +777,10 @@
         autoclose: true
     });
     $('#datetimepicker_start').datetimepicker({
-        format: 'HH',
+        format: 'HH:mm',
     });
     $('#datetimepicker_end').datetimepicker({
-        format: 'HH',
+        format: 'HH:mm',
     });
 </script>
 
