--- a/Server/templates/500.html
+++ b/Server/templates/500.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'assets/images/uni.png' %}">
-    <title>404</title>
+    <title>500</title>
     <!-- Custom CSS -->
     <link href="{% static 'dist/css/style.min.css' %}" rel="stylesheet">
 </head>
@@ -27,8 +27,8 @@
 
         <div class="error-box">
             <div class="error-body text-center">
-                <h1 class="error-title text-danger">404</h1>
-                <h3 class="text-uppercase error-subtitle">PAGE NOT FOUND</h3>
+                <h1 class="error-title text-danger">500</h1>
+                <h3 class="text-uppercase error-subtitle">INTERNAL SERVER ERROR</h3>
             </div>
         </div>
         <script src="{% static 'assets/libs/jquery/dist/jquery.min.js' %}"></script>
