first part of add deleted stations and edit solve a few bugs

--- a/Server/stations/templates/station_list.html
+++ b/Server/stations/templates/station_list.html
@@ -110,6 +110,9 @@
                 $.each($("input[name='deactive_station']:checked"), function(){ 
                     deactive_station_selceted.push($(this).val());
                 });
+                $.each($("input[name='active_station']:checked"), function(){ 
+                    deactive_station_selceted.push($(this).val());
+                });
                 window.value = deactive_station_selceted;
                 $("#exampleModal").modal('show');
 
