--- a/Server/templates/geolab.html
+++ b/Server/templates/geolab.html
@@ -33,8 +33,8 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center">
-            <a href="index.html" class="logo mr-auto" id="left-logo"><img src="{% static 'assets/images/firstPage/logo_ut_left.png' %}" alt="" class="img-fluid"></a>
-            <a href="index.html" class="logo mr-auto" id="right-logo"><img src="{% static 'assets/images/firstPage/logo_ut_right.png' %}" alt="" class="img-fluid"></a>
+            <a href="https://ut.ac.ir/" target="_blank" class="logo mr-auto" id="left-logo"><img src="{% static 'assets/images/firstPage/logo_ut_left.png' %}" alt="" class="img-fluid" href></a>
+            <a href="https://eng.ut.ac.ir/" target="_blank" class="logo mr-auto" id="right-logo"><img src="{% static 'assets/images/firstPage/logo_ut_right.png' %}" alt="" class="img-fluid"></a>
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
                     <li class="book-a-table text-center"><a href="{%url 'signpage' %}" id="login-button">LOGIN</a></li>
@@ -163,7 +163,7 @@
 
         <div class="container">
             <div class="copyright">
-                &copy; 2020 <strong><span><a href="http://ut.ac.ir/" target="_blank">University of Tehran</a></span></strong>. All Rights Reserved
+                &copy; 2020 <strong><span><a href="https://ut.ac.ir/" target="_blank">University of Tehran</a></span></strong>. All Rights Reserved
             </div>
         </div>
     </footer>
