--- a/Server/templates/signup.html
+++ b/Server/templates/signup.html
@@ -244,6 +244,7 @@
     });
 
     $('#select_all_model_single').on('click', function(){
+        console.log("worked")
         if ($(this).is(':checked')) {
             $('div input[class="form-check-input"]').prop('checked', true);
         } else {
